syntax = "proto3";

package roykv;

service Kv {
  rpc Get (GetRequest) returns (GetReply) {}
  rpc Exist (ExistRequest) returns (ExistReply) {}
  rpc Scan (ScanRequest) returns (ScanReply) {}
  rpc MGet (MGetRequest) returns (MGetReply) {}
  rpc GetAll (GetAllRequest) returns (GetAllReply) {}
}

message GetRequest {
  string key = 1;
}

message GetReply {
  string value = 1;
}

message ExistRequest {
  string key = 1;
}

message ExistReply {
  bool existed = 1;
}